Fix unintended padding for images on mobile, shift about section

--- a/css/custom.css
+++ b/css/custom.css
@@ -106,4 +106,15 @@
         top: 26%;
         left: 18%;
     }
+
+    #about {
+        margin-top: -3em;
+    }
+}
+
+@media only screen and (max-width: 767px) {
+    .col-sm-6 {
+        padding-left: 0px;
+        padding-right: 0px;
+    }
 }
